feature/PN-17470-with-discriminator (#1417)
* PN-17470 - springboot 3 migration for pn-delivery-push

* PN-17470 - application.properties + code clean

* [PN-17470] fix: removed discriminator and added legacy behavior for TimelineElementDetailsV27 generation

* [PN-17470] fix: added discriminator and external timeline schemas generation

* [PN-17470] feat: fix for field categoryType

* [PN-17470] fix: added generated schemas-pn-timeline-external.yaml

* [PN-17470] fix: added RequiredArgsConstructor to @SmartMapper

* [PN-17470] fix: changed CategoryTypeTimelineElementDetailsInt to GenericTimelineElementDetailsInt

---------

Co-authored-by: ECARADM5R <matteo.caradonna@emeal.nttdata.com>
Co-authored-by: empassaro <emanuele.passaro@emeal.nttdata.com>